--- a/aiohttp-sqlalchemy/app.toml
+++ b/aiohttp-sqlalchemy/app.toml
@@ -21,9 +21,9 @@ MYSQL_ROOT_PASSWORD.secret = true
 MYSQL_PASSWORD.secret = true
 MYSQL_DATABASE = "app"
 MYSQL_USER = "aiohttp-sqlalchemy"
-MYSQL_HOST=127.0.0.1
+MYSQL_HOST="127.0.0.1"
 MYSQL_PORT=3306
-HTTP_HOST=0.0.0.0
+HTTP_HOST="0.0.0.0"
 HTTP_PORT=8080
 
 [expose.8080]
