--- a/aiohttp-sqlalchemy/app.toml
+++ b/aiohttp-sqlalchemy/app.toml
@@ -14,6 +14,7 @@ RUN python -m pip install -r requirements.txt
 COPY app/* .
 
 RUN python -m backend.database.init_db 
+RUN python -m pytest
 """
 
 [variables]
